[tool.poetry]
name = "skylog-backend"
version = "0.1.0"
description = ""
authors = ["Surge <esfloyd9341@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.3"
requests = "^2.32.3"
sqlalchemy = "^2.0.40"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
